--- a/_emulator/firebase.json
+++ b/_emulator/firebase.json
@@ -3,7 +3,8 @@
     "firestore-send-email": "../firestore-send-email",
     "delete-user-data": "../delete-user-data",
     "storage-resize-images": "../storage-resize-images",
-    "firestore-counter": "../firestore-counter"
+    "firestore-counter": "../firestore-counter",
+    "firestore-post-request": "../firestore-post-request"
   },
   "storage": {
     "rules": "storage.rules"
